added top part service screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
 
   <!-- main -->
   <string name="catalog_title">Каталог услуг</string>
+  <string name="catalog_child_title">категории товаров</string>
 </resources>
