--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
   <!-- errors -->
   <string name="error_title">Ошибка</string>
+  <string name="server_not_connection">Сервер не отвечает. Проверьте подключение и повторите попытку</string>
 
   <!-- tabs -->
   <string name="tab_catalog">каталог</string>
