--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
   <!-- main -->
   <string name="catalog_title">Каталог услуг</string>
   <string name="catalog_child_title">категории товаров</string>
+  <string name="catalog_search">Поиск</string>
 
   <!-- payment -->
   <string name="payment_show_text">Покажите чек кассиру\nдля оплаты</string>
