--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
   <!-- errors -->
   <string name="error_title">Ошибка</string>
   <string name="server_not_connection">Сервер не отвечает. Проверьте подключение и повторите попытку</string>
+  <string name="error_wrong_data">Данные не корректны</string>
 
   <!-- tabs -->
   <string name="tab_catalog">каталог</string>
@@ -34,7 +35,7 @@
 
   <!-- templates -->
   <string name="templates_title">Корзина</string>
-  <string name="templates_title_descr">сейчас в корзине %d услуги</string>
+  <string name="templates_title_descr">сейчас в корзине %s</string>
   <string name="templates_amount">Сумма: %d грн</string>
   <string name="templates_account">| %d</string>
   <string name="templates_delete">Удалить</string>
@@ -49,4 +50,14 @@
   <string name="permission_settings">Настройки</string>
   <string name="permission_close">Закрыть</string>
   <string name="permission_confirm">Продолжить</string>
+
+  <!-- plural items -->
+  <plurals name="plurals_services">
+    <item quantity="zero">%d услуг</item>
+    <item quantity="one">%d услуга</item>
+    <item quantity="two">%d услуги</item>
+    <item quantity="few">%d услуги</item>
+    <item quantity="many">%d услуг</item>
+    <item quantity="other">%d услуг</item>
+  </plurals>
 </resources>
