--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
   <string name="payment_templates">Шаблоны</string>
   <string name="payment_account_title">Номер договора</string>
   <string name="payment_account_hint">Введите номер договора</string>
+  <string name="payment_account_title_phone">Номер телефона</string>
+  <string name="payment_account_hint_phone">Введите номер телефона</string>
   <string name="payment_amount_title">Сумма, грн</string>
   <string name="payment_amount_hint">Введите сумму</string>
   <string name="payment_go_to_payment">Перейти к оплате</string>
